--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.2",
+    "@tailwindcss/typography": "^0.5.13",
+    "framer-motion": "^11.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1"
   },
