fix: correct title spelling in index.html and enhance layout in GeneralInformation and SpaceProject components

--- a/src/Data/project.json
+++ b/src/Data/project.json
@@ -5,6 +5,7 @@
       "description": "The recipe book is a web page that uses an API to display recipes. It is also possible to save favorite recipes, for save the favorites is used the local storage",
       "url": "https://github.com/PabloIxcamparij/FrontEnd_Recetario.git",
       "urlProject": "https://recetarioixcam.netlify.app",
+      "type": "Front",
       "tecUsing": [
         {
           "title": "React"
@@ -23,6 +24,7 @@
       "description": "Design of a guitar store. It is made in react, it is reactive, and uses local storage to keep track of the cart.",
       "url": "https://github.com/PabloIxcamparij/Proyecto_React_Uno.git",
       "urlProject": "https://guitarixcam.netlify.app",
+      "type": "Front",
       "tecUsing": [
         {
           "title": "React"
@@ -41,6 +43,7 @@
       "description": "Game created as part of my social service. It is a card game that uses stores (zustand) to control its functionality, in addition to the local storage functionality for game scores.",
       "url": "https://github.com/PabloIxcamparij/Proyecto_EcoCard",
       "urlProject": "https://ecocard.netlify.app",
+      "type": "Front",
       "tecUsing": [
         {
           "title": "React"
